--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -72,28 +72,19 @@
 }
 
 
-/*========== location ==========*/
-.location {
+/*========== weather =========*/
+.weather{
     background-color: var(--back-ground-primary);
 }
 
-.location h6 {
+/*--- current ---*/
+
+.weather .current .location h6 {
     font-size: var(--text-body);
     font-weight: var(--medium);
     color: var(--typography);
 }
 
-.location .label {
-    border: none;
-    font-size: var(--text-body);
-    font-weight: var(--medium);
-    color: var(--typography);
-    background-color: var(--back-ground-third);
-    border-radius: 30px;
-}
-
-
-/*========== weather =========*/
 .weather .current .card {
     background-color: var(--back-ground-second);
     color: var(--typography);
@@ -107,15 +98,49 @@
 .weather .current .card .card-subtitle{
     font-size: var(--text-header-h6);
     font-weight: var(--medium);
-    color: var(--typography);
 }
 
 .weather .current .card .card-subtitle .time{
     font-size: var(--text-subtitle);
     font-weight: var(--medium);
-    color: var(--typography);
 }
 
+.weather .current .card .weatherImg{
+    width: 150px;
+    height: 150px;
+    object-fit: contain;
+}
+
+.weather .current .card .temp{
+    font-size: var(--text-header-h3);
+    font-weight: var(--blod);
+}
+
+.weather .current .card .tempFormat{
+    font-size: var(--text-header-h6);
+    font-weight: var(--medium);
+}
+
+.weather .current .card .label{
+    font-size: var(--text-subtitle);
+    font-weight: var(--medium);
+}
+
+.weather .current .card .value{
+    font-size: var(--text-body);
+    font-weight: var(--medium);
+}
+
+/*--- forecast ---*/
+.weather .forecast .label {
+    border: none;
+    font-size: var(--text-body);
+    font-weight: var(--medium);
+    color: var(--typography);
+    background-color: var(--back-ground-third);
+    border-radius: 30px;
+    cursor: default;
+}
 
 
 
