user customization optimize

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,6 +244,27 @@
 }
 
 
+/*========== scrollbar style ==========*/
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px var(--back-ground-primary);
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--back-ground-second);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--back-ground-third);
+}
 
 
 
